# tree

./: CMakeLists.txt  Makefile  README.md  graphviz.dot  test_gener.py  tree.cpp  tree.hpp  tree_debug.cpp  tree_debug.hpp
include/: cmp_answers.hpp  comparing.hpp  tree.hpp
level_1/: CMakeLists.txt  main.cpp
level_1/include/: comparing.hpp
level_1/tests/: tests.sh
level_1/tmp/: graphviz.dot
level_2/: CMakeLists.txt  main.cpp  test_gener.py
level_2/include/: comparing.hpp
level_2/tests/: tests.sh
level_2/tmp/: graphviz.dot
source/: tree.cpp
tests/: tests.sh
tmp/: graphviz.dot
